# sentinel-ecosystem

./: .gitignore  GEMINI.md  METADATA.md  README.md  sentinel-ecosystem.code-workspace
data-pipeline/: README.md  duckdb_notebook.ipynb  instructions-project-data-pipeline.md  pyproject.toml
data-pipeline/scripts/: chaos_monkey.py  run_pipeline.py  run_recon.py
data-pipeline/src/: config.py
data-pipeline/src/ingestion/: loader.py
data-pipeline/src/reconciliation/: reconciler.py
data-pipeline/src/repository/: base.py  duckdb_repo.py
data-pipeline/src/services/: producer.py
data-pipeline/src/transformations/: processor.py
data-sentinel/: README.md  config.py  instructions-project-datasentinel.md  pyproject.toml
data-sentinel/datasentinel/: agent.py  guardrails.py
data-sentinel/datasentinel/prompts/: cloud_orchestrator.md  local_orchestrator.md
data-sentinel/datasentinel/skills/code-debugger-skill/: SKILL.md
data-sentinel/datasentinel/skills/code-debugger-skill/references/: business_logic.md
data-sentinel/datasentinel/skills/data-analyst-skill/: SKILL.md
data-sentinel/datasentinel/skills/log-analyst-skill/: SKILL.md
data-sentinel/datasentinel/tools/: code_tool.py  db_tool.py  log_tool.py
data-sentinel/mock_agent_dir/: agent.py
